# profitpilotai

./: --  .env.example  Procfile  admin.html  admin_login.html  app.py  auth.py  dashboard.html  database.py  deriv_ws.py  index.html  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  setup_render.sh  style.css  user_dashboard.html
backend/: auth.py  emailer.py  main.py  nowpayments.py  payments.py  supabase_utils.py
backend/templates/: dashboard.html
bot/: engine.py
profitpilot/: .env.example  README.md  render.yaml  reset_and_setup.sh
profitpilot/backend/: .env.example  auth_utils.py  main.py  requirements.txt  self_learning.py  strategy_service.py  supabase_utils.py  trading_service.py
profitpilot/backend/routes/: api.py  webhooks.py
profitpilot/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
profitpilot/frontend/src/: App.jsx  index.css  index.jsx
profitpilot/frontend/src/components/: AdminDashboard.jsx  BotControls.jsx  Login.jsx  PairMultiSelect.jsx  ProtectedRoute.jsx  SelfLearningPanel.jsx  Settings.jsx  TradeLogs.jsx  UserDashboard.jsx
profitpilot/frontend/src/context/: AuthContext.jsx
profitpilot/frontend/src/lib/: api.js
profitpilot_frontend/templates/: index.html
static/: style.css  user_dashboard.html
static/css/: style.css
templates/: admin.html  admin_add_user.html  admin_users.html  change_password.html  dashboard.html  edit_user.html  forgot.html  index.html  login.html  register.html  reset.html  user.html  user_dashboard.html  verify_done.html  verify_error.html  verify_failed.html  verify_ok.html  verify_sent.html
templates/bot/: engine.py
