[tool.poetry]
name = "profitpilotai"
version = "0.1.0"
description = "ProfitPilotAI - FastAPI backend with Supabase, Telegram Bot, and Deriv WebSocket"
authors = ["Your Name <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"  # Ensure Python 3.11 is used
fastapi = "0.111.0"  # Latest stable FastAPI version
uvicorn = "0.30.1"  # ASGI server for FastAPI
supabase = "2.4.0"  # Supabase client
python-dotenv = "1.0.1"  # For environment variable management
requests = "2.32.3"  # HTTP requests library
httpx = ">=0.24,<0.26"  # Compatible version for supabase
aiohttp = "3.9.5"  # Async HTTP client
pandas = "2.2.2"  # Data manipulation library
numpy = "1.26.4"  # Numerical computing library
websockets = "12.0"  # WebSocket support
loguru = "0.7.2"  # Logging library

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"  # Testing framework
black = "^23.10.0"  # Code formatter
mypy = "^1.7.0"  # Static type checker
flake8 = "^6.1.0"  # Linter

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
