[tool.poetry]
name = "profitpilotai"
version = "0.1.0"
description = "ProfitPilotAI: FastAPI app with admin dashboard, Supabase, and Deriv WS"
authors = ["Chris <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
stripe = "^8.9.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python = "^3.11"
fastapi = "0.111.0"
uvicorn = "0.30.1"
supabase = "2.4.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
aiohttp = "3.9.5"
websockets = "12.0"
pandas = "2.2.2"
numpy = "1.26.4"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
itsdangerous = "^2.2.0"
loguru = "0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
